# elephant-logger

./: .editorconfig  .gitignore  .todo  .travis.yml  CMakeLists.txt  Doxyfile  README.md  TODO.txt  build.sh
CMake/: AddCompilerFlags.cmake  AddExamples.cmake  CompilerFlags.cmake  CreateLibrary.cmake  Examples.cmake
examples/: CMakeLists.txt  example1.cpp
examples/ex1_simpleUse/: main.cpp
examples/ex2_multiClasses/: MyClass1.cpp  MyClass2.cpp  main.cpp
examples/ex3_customInit/: main.cpp
examples/ex3_customOutputs/: main.cpp
examples/ex3_saveLogs/: main.cpp
examples/ex4_customInit/: main.cpp
examples/ex4_loggerCategoriesFilter/: main.cpp
examples/ex4_loggerChannelsFilter/: main.cpp
examples/ex_custom_outputs/: main.cpp
examples/ex_file_output/: main.cpp
examples/ex_logger_categories_filters/: main.cpp
examples/ex_multi_classes/: MyClass1.cpp  MyClass1.h  MyClass2.h  main.cpp
examples/ex_simple_usage/: main.cpp
examples/example1/: main.cpp
examples/example2/: MyClass1.cpp  MyClass1.h  MyClass2.cpp  MyClass2.h  main.cpp
include/: ElephantLogger.h  LogChannel.h  LogChannelCout.h  LogChannelVS.h  LogFile.h  LogLevel.h  LogMessage.h  LogOutput.h  LogOutputCout.h  LogOutputType.h  LogOutputVS.h  Logger.h  LoggerConfig.h  LoggerManager.h  elephant.h  elephantlogger.h
include/core/: Channel.h  LogLevel.h  LogMessage.h
include/elephantlogger/: log.h
include/elephantlogger/core/: Channel.h  LogLevel.h  LogMessage.h  Logger.h  config.h
include/elephantlogger/details/: Channel.h  LogFilter.h  LogLevel.h  LogMessage.h  Logger.h  LoggerMultithreads.h  Singleton.h  config.h  utils.h
include/elephantlogger/logger/: LogLevel.h  Logger.h  LoggerConfig.h
include/elephantlogger/output/: ConsoleCout.h  ConsoleVS.h  IOutput.h  LogFile.h
include/elephantlogger/outputs/: ConsoleCout.h  ConsoleLogOutput.h  ConsoleOutput.h  ConsoleVS.h  DebugOutput.h  FileLogOutput.h  FileOutput.h  IOutput.h  LogFile.h  LogOutput.h  LogOutput_Console.h  LogOutput_ConsoleColor.h  LogOutput_File.h
include/elephantlogger/utils/: LoggerAutoInstaller.h  Singleton.h  Uncopyable.h
include/helper/: Singleton.h  Uncopyable.h
include/logger/: Channel.h  ElephantLogger.h  Logger.h  LoggerConfig.h  elephant.h
include/output/: ConsoleCout.h  ConsoleVS.h  IOutput.h  LogFile.h
include/utils/: LoggerAutoInstaller.h  Singleton.h  Uncopyable.h  constants.h
src/: ElephantLogger.h  LogChannel.cpp  LogChannel.h  LogFile.cpp  LogLevel.h  LogMessage.cpp  LogMessage.h  LogOutput.cpp  Logger.cpp  LoggerConfig.h  LoggerManager.cpp  LoggerManager.h  MoonRPGElephantLoggerPch.cpp  MoonRPGElephantLoggerPch.h  init.cpp  log.cpp  main.cpp
src/core/: Channel.cpp  Channel.h  LogMessage.cpp  Logger.cpp  Logger.h  LoggerConfig.h
src/logger/: Channel.cpp  LogMessage.cpp  Logger.cpp
src/output/: LogFile.cpp
src/outputs/: ConsoleCout.cpp  ConsoleVS.cpp  LogFile.cpp
src/utils/: LoggerAutoInstaller.h  Singleton.h  Uncopyable.h  config.h
